fix: ajustement padding flêche collapse

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -39,24 +39,25 @@
     .arrowBtn {
       border-radius:$border-radius;
       border:0px;
-      padding-right: 10px;
+      padding: 0 10px;
+
       background-color: $kasa-color; 
       transition-property: transform;
-      transition-duration: 400ms;
+      transition-duration: 300ms;
       &:active {
         transform: rotate(180deg) ;
         text-align: center;
       }
-    }
-    .arrowImg {
-    width:24px;
-    height:13px;
+      .arrowImg {
+      width:24px;
+      height:13px;
+      }
     }
     .arrowRotationDown {
-    transform: rotate(0deg) ;
+      transform: rotate(0deg) ;
     } 
    .arrowRotationUp {
-    transform: rotate(180deg) ;
+      transform: rotate(-180deg) ;
    } 
   }
   li {
